--- a/Social.html
+++ b/Social.html
@@ -7,13 +7,13 @@
 <body>
     <a
 target="_blank"
-href="file:///D:/task1/index.html">
+href="./index.html">
 the page of index
 </a>
 |
 <a
    target="_blank"
-   href="file:///D:/task1/food.html">
+   href="./food.html">
    the page of food
 
 </a>
