--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <a
    target="_blank"
-   href="file:///D:/task1/food.html">
+   href="./food.html">
    the page of food
 
 </a>
 |
 <a
    target="_blank"
-href="file:///D:/task1/Social.html">
+href="./Social.html">
 the page of social
 
 </a>
