--- a/food.html
+++ b/food.html
@@ -6,7 +6,7 @@
 <body>
     <a
 target="_blank"
-href="file:///D:/task1/index.html">
+href="./index.html">
 the page of index
 </a>
 
@@ -15,7 +15,7 @@ the page of index
 <a
    target="_blank"
 
-href="file:///D:/task1/Social.html">
+href="./Social.html">
 the page of social
 
 </a>
